--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -49,16 +49,16 @@ a {
 p {
     font-size: 16px;
 }
-/* main image */
-.hero {
+/* Meeting Photo (Show teamwork and problemsolving) */
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("./images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
-
+/* Summary Styling */
 .float-left, .float-right {
     float: left;
     margin-right: 25px;
@@ -69,7 +69,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* Aside Styling */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -80,7 +80,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Content of Aside */
 .benefit-lead,
  .benefit-brand,
   .benefit-cost {
@@ -102,7 +102,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* Content of Summary */
 .search-engine-optimization,
  .online-reputation-management, 
   .social-media-marketing {
@@ -126,7 +126,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* Footer Styling */
 footer {
     padding: 30px;
     clear: both;
