--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -40,7 +40,7 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* Nav Text */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-/* Meeting Photo (Show teamwork and problemsolving) */
+/* Main Photo (Show teamwork and problemsolving) */
 #hero {
     height: 800px;
     width: 100%;
@@ -57,8 +57,9 @@ p {
     background-image: url("./images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    position: relative;
 }
-/* Summary Styling */
+/* Summary Styling (Summarize our services)*/
 .float-left, .float-right {
     float: left;
     margin-right: 25px;
@@ -69,7 +70,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-/* Aside Styling */
+/* Aside Styling (Show the benefits of using our services) */
 .benefits {
     margin-right: 20px;
     padding: 20px;
